--- a/index.html
+++ b/index.html
@@ -13,49 +13,42 @@
   <meta name="msapplication-starturl" content="/">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>Welcome To Kejani</title>
-
+  
   <!-- CSS  -->
+  <link rel="manifest" href="manifest.json">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
   <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
   <link rel="shortcut icon" href="assets/icons/site-icon.png" type="image/x-icon">
   <link rel="stylesheet" href="/font-awesome-4.7.0/css/font-awesome.min.css">
-  <link rel="icon" sizes="512x512" href="mipmap.png">
-  <link rel="apple-touch-icon" sizes="512x512" href="mipmap.png">
-  <link rel="icon" sizes="256x256" href="mipmap.png">
-  <link rel="apple-touch-icon" sizes="256x256" href="mipmap.png">
-  <link rel="icon" sizes="128x128" href="mipmap.png">
-  <link rel="apple-touch-icon" sizes="128x128" href="mipmap.png">
-  <link rel="icon" sizes="64x64" href="mipmap.png">
-  <link rel="apple-touch-icon" sizes="64x64" href="mipmap.png">
-  <link rel="icon" sizes="32x32" href="mipmap.png">
-  <link rel="apple-touch-icon" sizes="32x32" href="mipmap.png">
-  <link rel="manifest" href="manifest.json">
+  <link rel="icon" sizes="512x512" href="./assets/icons/mipmap.png">
+  <link rel="apple-touch-icon" sizes="512x512" href="./assets/icons/mipmap.png">
+  <link rel="icon" sizes="256x256" href="./assets/icons/mipmap.png">
+  <link rel="apple-touch-icon" sizes="256x256" href="./assets/icons/mipmap.png">
+  <link rel="icon" sizes="128x128" href="./assets/icons/mipmap.png">
+  <link rel="apple-touch-icon" sizes="128x128" href="./assets/icons/mipmap.png">
+  <link rel="icon" sizes="64x64" href="./assets/icons/mipmap.png">
+  <link rel="apple-touch-icon" sizes="64x64" href="./assets/icons/mipmap.png">
+  <link rel="icon" sizes="32x32" href="./assets/icons/mipmap.png">
+  <link rel="apple-touch-icon" sizes="32x32" href="./assets/icons/mipmap.png">
+  <script type="text/javascript" src="/app.js"></script>
 
-  <script>
-    // Check that service workers are registered
-    if ('serviceWorker' in navigator) {
-      // Use the window load event to keep the page load performant
-      window.addEventListener('load', () => {
-        navigator.serviceWorker.register('/sw.js');
-      });
-    }
-  </script>
 </head>
 <body>
   <nav class="light-blue lighten-1" role="navigation">
     <div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo">Kejani</a>
       <ul class="right hide-on-med-and-down">
-        <li><a href="#">About</a></li>
-        <li><a href="#">Sign In</a></li>
-        <li><a href="#">Log In</a></li>
-        <li><a href="#">Contact Us</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="contact.html">Contact Us</a></li>
+        <li><a href="signin.html">Sign In</a></li>
+        <li><a href="login.html">Log In</a></li>
       </ul>
 
       <ul id="nav-mobile" class="sidenav">
-        <li><a href="#">About</a></li>
-        <li><a href="#">Sign In</a></li>
-        <li><a href="#">Contact Us</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="contact.html">Contact Us</a></li>
+        <li><a href="signin.html">Sign In</a></li>
+        <li><a href="login.html">Log In</a></li>
       </ul>
       <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
     </div>
@@ -134,10 +127,10 @@
         <div class="col l3 s12">
           <h5 class="white-text">Connect</h5>
           <ul class="social">
-            <li><a class="white-text" href="#!"><i class="fa fa-2x fa-facebook"></i> &nbsp;Kejani Superior Homes</a></li>
-            <li><a class="white-text" href="#!"><i class="fa fa-2x fa-twitter"></i> &nbsp;@kejani_superior_homes</a></li>
-            <li><a class="white-text" href="#!"><i class="fa fa-2x fa-google-plus"></i> &nbsp;Kejani Superior Homes</a></li>
-            <li><a class="white-text" href="#!"><i class="fa fa-2x fa-linkedin"></i> &nbsp;Kejani Superior Homes</a></li>
+            <li><a class="white-text" href="#!"><i class="fa fa-facebook fa-fw fa-border"></i>&nbsp; Kejani Superior Homes</a></li>
+            <li><a class="white-text" href="#!"><i class="fa fa-twitter fa-fw fa-border"></i>&nbsp; @kejani_superior_homes</a></li>
+            <li><a class="white-text" href="#!"><i class="fa fa-google-plus fa-fw fa-border"></i>&nbsp; Kejani Superior Homes</a></li>
+            <li><a class="white-text" href="#!"><i class="fa fa-linkedin fa-fw fa-border"></i>&nbsp; Kejani Superior Homes</a></li>
           </ul>
         </div>
       </div>
